Added delete blobs API for Issue 36
